--- a/test-output/old/Default suite/classes.html
+++ b/test-output/old/Default suite/classes.html
@@ -12,22 +12,32 @@
 <tr>
 <td>&nbsp;</td>
 <td>verifyUserCreationData</td>
-<td>Parag </td>
+<td>PPpariharPQR </td>
+</tr>
+<tr>
+<td>&nbsp;</td>
+<td>validateInfoImageupdated</td>
+<td>@PARAG123456789 </td>
 </tr>
 <tr>
 <td>&nbsp;</td>
 <td>verifyAdminOption</td>
-<td>Sanity </td>
+<td>PPparihar </td>
 </tr>
 <tr>
 <td>&nbsp;</td>
 <td>verifyEmployeeTableData</td>
-<td>Regression </td>
+<td>PPpariharXYZ </td>
 </tr>
 <tr>
 <td>&nbsp;</td>
 <td>verifyCompanyNameInAboutWindowOption</td>
-<td>Smoke </td>
+<td>PPparihar123 </td>
+</tr>
+<tr>
+<td>&nbsp;</td>
+<td>validateFileUploadAndImageUpload</td>
+<td>PP@Parihar@PP </td>
 </tr>
 <tr>
 <td align='center' colspan='3'>@BeforeClass</td>
