--- a/test-output/old/Suite/methods-not-run.html
+++ b/test-output/old/Suite/methods-not-run.html
@@ -1,2 +1,7 @@
 <h2>Methods that were not run</h2><table>
+<tr><td>test_package.HomePage_TestingClass.validateFileUploadAndImageUpload</td></tr>
+<tr><td>test_package.HomePage_TestingClass.verifyUserCreationData</td></tr>
+<tr><td>test_package.HomePage_TestingClass.verifyEmployeeTableData</td></tr>
+<tr><td>test_package.HomePage_TestingClass.verifyAdminOption</td></tr>
+<tr><td>test_package.HomePage_TestingClass.verifyCompanyNameInAboutWindowOption</td></tr>
 </table>
