--- a/test-output/old/Default suite/methods-alphabetical.html
+++ b/test-output/old/Default suite/methods-alphabetical.html
@@ -1,26 +1,34 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="a19691">  <td>25/03/11 15:01:57</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;HomePage_TestingClass.ClosedTheApplication()[pri:0, instance:test_package.HomePage_TestingClass@22555ebf]">&lt;&lt;ClosedTheApplication</td> 
+<tr bgcolor="a19691">  <td>25/10/28 12:55:06</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;HomePage_TestingClass.ClosedTheApplication()[pri:0, instance:test_package.HomePage_TestingClass@45752059]">&lt;&lt;ClosedTheApplication</td> 
 <td>&nbsp;</td>  <td>main@617901222</td>   <td></td> </tr>
-<tr bgcolor="a19691">  <td>25/03/11 15:01:57</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;HomePage_TestingClass.ClosedTheApplication()[pri:0, instance:test_package.HomePage_TestingClass@22555ebf]">&lt;&lt;ClosedTheApplication</td> 
+<tr bgcolor="a19691">  <td>25/10/28 12:55:06</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;HomePage_TestingClass.ClosedTheApplication()[pri:0, instance:test_package.HomePage_TestingClass@45752059]">&lt;&lt;ClosedTheApplication</td> 
 <td>&nbsp;</td>  <td>main@617901222</td>   <td></td> </tr>
-<tr bgcolor="a19691">  <td>25/03/11 15:01:57</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;HomePage_TestingClass.ClosedTheApplication()[pri:0, instance:test_package.HomePage_TestingClass@22555ebf]">&lt;&lt;ClosedTheApplication</td> 
+<tr bgcolor="a19691">  <td>25/10/28 12:55:06</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;HomePage_TestingClass.ClosedTheApplication()[pri:0, instance:test_package.HomePage_TestingClass@45752059]">&lt;&lt;ClosedTheApplication</td> 
 <td>&nbsp;</td>  <td>main@617901222</td>   <td></td> </tr>
-<tr bgcolor="a19691">  <td>25/03/11 15:01:57</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;HomePage_TestingClass.ClosedTheApplication()[pri:0, instance:test_package.HomePage_TestingClass@22555ebf]">&lt;&lt;ClosedTheApplication</td> 
+<tr bgcolor="a19691">  <td>25/10/28 12:55:06</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;HomePage_TestingClass.ClosedTheApplication()[pri:0, instance:test_package.HomePage_TestingClass@45752059]">&lt;&lt;ClosedTheApplication</td> 
 <td>&nbsp;</td>  <td>main@617901222</td>   <td></td> </tr>
-<tr bgcolor="a19691">  <td>25/03/11 15:01:57</td>   <td>-8</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;HomePage_TestingClass.LoginInToTheApplication()[pri:0, instance:test_package.HomePage_TestingClass@22555ebf]">&gt;&gt;LoginInToTheApplication</td> 
+<tr bgcolor="a19691">  <td>25/10/28 12:55:06</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;HomePage_TestingClass.ClosedTheApplication()[pri:0, instance:test_package.HomePage_TestingClass@45752059]">&lt;&lt;ClosedTheApplication</td> 
 <td>&nbsp;</td>  <td>main@617901222</td>   <td></td> </tr>
-<tr bgcolor="a19691">  <td>25/03/11 15:01:57</td>   <td>-8</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;HomePage_TestingClass.LoginInToTheApplication()[pri:0, instance:test_package.HomePage_TestingClass@22555ebf]">&gt;&gt;LoginInToTheApplication</td> 
+<tr bgcolor="a19691">  <td>25/10/28 12:55:06</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;HomePage_TestingClass.ClosedTheApplication()[pri:0, instance:test_package.HomePage_TestingClass@45752059]">&lt;&lt;ClosedTheApplication</td> 
 <td>&nbsp;</td>  <td>main@617901222</td>   <td></td> </tr>
-<tr bgcolor="a19691">  <td>25/03/11 15:01:57</td>   <td>-8</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;HomePage_TestingClass.LoginInToTheApplication()[pri:0, instance:test_package.HomePage_TestingClass@22555ebf]">&gt;&gt;LoginInToTheApplication</td> 
+<tr bgcolor="a19691">  <td>25/10/28 12:55:06</td>   <td>-4</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;HomePage_TestingClass.LoginInToTheApplication()[pri:0, instance:test_package.HomePage_TestingClass@45752059]">&gt;&gt;LoginInToTheApplication</td> 
 <td>&nbsp;</td>  <td>main@617901222</td>   <td></td> </tr>
-<tr bgcolor="a19691">  <td>25/03/11 15:01:57</td>   <td>-8</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;HomePage_TestingClass.LoginInToTheApplication()[pri:0, instance:test_package.HomePage_TestingClass@22555ebf]">&gt;&gt;LoginInToTheApplication</td> 
+<tr bgcolor="a19691">  <td>25/10/28 12:55:06</td>   <td>-4</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;HomePage_TestingClass.LoginInToTheApplication()[pri:0, instance:test_package.HomePage_TestingClass@45752059]">&gt;&gt;LoginInToTheApplication</td> 
 <td>&nbsp;</td>  <td>main@617901222</td>   <td></td> </tr>
-<tr bgcolor="a19691">  <td>25/03/11 15:01:57</td>   <td>5</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;HomePage_TestingClass.cleanObjects()[pri:0, instance:test_package.HomePage_TestingClass@22555ebf]">&lt;&lt;cleanObjects</td> 
+<tr bgcolor="a19691">  <td>25/10/28 12:55:06</td>   <td>-4</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;HomePage_TestingClass.LoginInToTheApplication()[pri:0, instance:test_package.HomePage_TestingClass@45752059]">&gt;&gt;LoginInToTheApplication</td> 
+<td>&nbsp;</td>  <td>main@617901222</td>   <td></td> </tr>
+<tr bgcolor="a19691">  <td>25/10/28 12:55:06</td>   <td>-4</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;HomePage_TestingClass.LoginInToTheApplication()[pri:0, instance:test_package.HomePage_TestingClass@45752059]">&gt;&gt;LoginInToTheApplication</td> 
+<td>&nbsp;</td>  <td>main@617901222</td>   <td></td> </tr>
+<tr bgcolor="a19691">  <td>25/10/28 12:55:06</td>   <td>-4</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;HomePage_TestingClass.LoginInToTheApplication()[pri:0, instance:test_package.HomePage_TestingClass@45752059]">&gt;&gt;LoginInToTheApplication</td> 
+<td>&nbsp;</td>  <td>main@617901222</td>   <td></td> </tr>
+<tr bgcolor="a19691">  <td>25/10/28 12:55:06</td>   <td>-4</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;HomePage_TestingClass.LoginInToTheApplication()[pri:0, instance:test_package.HomePage_TestingClass@45752059]">&gt;&gt;LoginInToTheApplication</td> 
+<td>&nbsp;</td>  <td>main@617901222</td>   <td></td> </tr>
+<tr bgcolor="a19691">  <td>25/10/28 12:55:06</td>   <td>3</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;HomePage_TestingClass.cleanObjects()[pri:0, instance:test_package.HomePage_TestingClass@45752059]">&lt;&lt;cleanObjects</td> 
 <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@617901222</td>   <td></td> </tr>
-<tr bgcolor="a19691">  <td>25/03/11 15:01:57</td>   <td>6</td> <td>&nbsp;</td><td title="&lt;&lt;HomePage_TestingClass.closedBrowser()[pri:0, instance:test_package.HomePage_TestingClass@22555ebf]">&lt;&lt;closedBrowser</td> 
+<tr bgcolor="a19691">  <td>25/10/28 12:55:06</td>   <td>4</td> <td>&nbsp;</td><td title="&lt;&lt;HomePage_TestingClass.closedBrowser()[pri:0, instance:test_package.HomePage_TestingClass@45752059]">&lt;&lt;closedBrowser</td> 
 <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@617901222</td>   <td></td> </tr>
-<tr bgcolor="a19691">  <td>25/03/11 15:01:57</td>   <td>-68</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;HomePage_TestingClass.launchApplication()[pri:0, instance:test_package.HomePage_TestingClass@22555ebf]">&gt;&gt;launchApplication</td> 
+<tr bgcolor="a19691">  <td>25/10/28 12:55:06</td>   <td>-86</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;HomePage_TestingClass.launchApplication()[pri:0, instance:test_package.HomePage_TestingClass@45752059]">&gt;&gt;launchApplication</td> 
 <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@617901222</td>   <td></td> </tr>
 </table>
