--- a/test-output/old/Suite/groups.html
+++ b/test-output/old/Suite/groups.html
@@ -1,1 +1,3 @@
-<h2>Groups used for this test run</h2>
+<h2>Groups used for this test run</h2><table border="1">
+<tr> <td align="center"><b>Group name</b></td><td align="center"><b>Methods</b></td></tr><tr><td>@PARAG123456789</td><td>HomePage_TestingClass.validateInfoImageupdated()[pri:0, instance:test_package.HomePage_TestingClass@327514f]<br/></td></tr>
+</table>
