--- a/test-output/old/Suite/methods-alphabetical.html
+++ b/test-output/old/Suite/methods-alphabetical.html
@@ -1,20 +1,18 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="63f569">  <td>25/03/11 20:11:47</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginPage_TestingClass.VerifyloginTest(java.lang.String,java.lang.String,java.lang.String)[pri:0, instance:test_package.LoginPage_TestingClass@217ed35e]">VerifyloginTest</td> 
-  <td>main@617901222</td>   <td></td> </tr>
-<tr bgcolor="63f569">  <td>25/03/11 20:11:47</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginPage_TestingClass.VerifyloginTest(java.lang.String,java.lang.String,java.lang.String)[pri:0, instance:test_package.LoginPage_TestingClass@217ed35e]">VerifyloginTest</td> 
-  <td>main@617901222</td>   <td></td> </tr>
-<tr bgcolor="63f569">  <td>25/03/11 20:11:47</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginPage_TestingClass.VerifyloginTest(java.lang.String,java.lang.String,java.lang.String)[pri:0, instance:test_package.LoginPage_TestingClass@217ed35e]">VerifyloginTest</td> 
-  <td>main@617901222</td>   <td></td> </tr>
-<tr bgcolor="63f569">  <td>25/03/11 20:11:47</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginPage_TestingClass.VerifyloginTest(java.lang.String,java.lang.String,java.lang.String)[pri:0, instance:test_package.LoginPage_TestingClass@217ed35e]">VerifyloginTest</td> 
-  <td>main@617901222</td>   <td></td> </tr>
-<tr bgcolor="63f569">  <td>25/03/11 20:11:53</td>   <td>5337</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;LoginPage_TestingClass.cleanObjects()[pri:0, instance:test_package.LoginPage_TestingClass@217ed35e]">&lt;&lt;cleanObjects</td> 
+<tr bgcolor="ab8173">  <td>25/10/28 13:58:17</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;HomePage_TestingClass.ClosedTheApplication()[pri:0, instance:test_package.HomePage_TestingClass@327514f]">&lt;&lt;ClosedTheApplication</td> 
+<td>&nbsp;</td>  <td>main@617901222</td>   <td></td> </tr>
+<tr bgcolor="ab8173">  <td>25/10/28 13:57:25</td>   <td>-51442</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;HomePage_TestingClass.LoginInToTheApplication()[pri:0, instance:test_package.HomePage_TestingClass@327514f]">&gt;&gt;LoginInToTheApplication</td> 
+<td>&nbsp;</td>  <td>main@617901222</td>   <td></td> </tr>
+<tr bgcolor="ab8173">  <td>25/10/28 13:58:57</td>   <td>40124</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;HomePage_TestingClass.cleanObjects()[pri:0, instance:test_package.HomePage_TestingClass@327514f]">&lt;&lt;cleanObjects</td> 
 <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@617901222</td>   <td></td> </tr>
-<tr bgcolor="63f569">  <td>25/03/11 20:11:53</td>   <td>5340</td> <td>&nbsp;</td><td title="&lt;&lt;LoginPage_TestingClass.closedBrowser()[pri:0, instance:test_package.LoginPage_TestingClass@217ed35e]">&lt;&lt;closedBrowser</td> 
+<tr bgcolor="ab8173">  <td>25/10/28 13:58:57</td>   <td>40125</td> <td>&nbsp;</td><td title="&lt;&lt;HomePage_TestingClass.closedBrowser()[pri:0, instance:test_package.HomePage_TestingClass@327514f]">&lt;&lt;closedBrowser</td> 
 <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@617901222</td>   <td></td> </tr>
-<tr bgcolor="63f569">  <td>25/03/11 20:11:18</td>   <td>-28937</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;LoginPage_TestingClass.launchApplication()[pri:0, instance:test_package.LoginPage_TestingClass@217ed35e]">&gt;&gt;launchApplication</td> 
+<tr bgcolor="ab8173">  <td>25/10/28 13:57:18</td>   <td>-58151</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;HomePage_TestingClass.launchApplication(java.lang.String)[pri:0, instance:test_package.HomePage_TestingClass@327514f]">&gt;&gt;launchApplication</td> 
 <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@617901222</td>   <td></td> </tr>
-<tr bgcolor="63f569">  <td>25/03/11 20:11:14</td>   <td>-32949</td> <td>&nbsp;</td><td title="&gt;&gt;LoginPage_TestingClass.launchBrowser(java.lang.String)[pri:0, instance:test_package.LoginPage_TestingClass@217ed35e]">&gt;&gt;launchBrowser</td> 
+<tr bgcolor="ab8173">  <td>25/10/28 13:57:15</td>   <td>-61593</td> <td>&nbsp;</td><td title="&gt;&gt;HomePage_TestingClass.launchBrowser(java.lang.String)[pri:0, instance:test_package.HomePage_TestingClass@327514f]">&gt;&gt;launchBrowser</td> 
 <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@617901222</td>   <td></td> </tr>
+<tr bgcolor="ab8173">  <td>25/10/28 13:57:36</td>   <td>-40104</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="HomePage_TestingClass.validateInfoImageupdated()[pri:0, instance:test_package.HomePage_TestingClass@327514f]">validateInfoImageupdated</td> 
+  <td>main@617901222</td>   <td></td> </tr>
 </table>
