[committed on 13jan2026]

--- a/test-output/old/Default suite/groups.html
+++ b/test-output/old/Default suite/groups.html
@@ -1,8 +1,5 @@
 <h2>Groups used for this test run</h2><table border="1">
-<tr> <td align="center"><b>Group name</b></td><td align="center"><b>Methods</b></td></tr><tr><td>@PARAG123456789</td><td>HomePage_TestingClass.validateInfoImageupdated()[pri:0, instance:test_package.HomePage_TestingClass@45752059]<br/></td></tr>
-<tr><td>PP@Parihar@PP</td><td>HomePage_TestingClass.validateFileUploadAndImageUpload()[pri:0, instance:test_package.HomePage_TestingClass@45752059]<br/></td></tr>
-<tr><td>PPparihar</td><td>HomePage_TestingClass.verifyAdminOption()[pri:-1, instance:test_package.HomePage_TestingClass@45752059]<br/></td></tr>
-<tr><td>PPparihar123</td><td>HomePage_TestingClass.verifyCompanyNameInAboutWindowOption()[pri:2, instance:test_package.HomePage_TestingClass@45752059]<br/></td></tr>
-<tr><td>PPpariharPQR</td><td>HomePage_TestingClass.verifyUserCreationData()[pri:-5, instance:test_package.HomePage_TestingClass@45752059]<br/></td></tr>
-<tr><td>PPpariharXYZ</td><td>HomePage_TestingClass.verifyEmployeeTableData()[pri:3, instance:test_package.HomePage_TestingClass@45752059]<br/></td></tr>
+<tr> <td align="center"><b>Group name</b></td><td align="center"><b>Methods</b></td></tr><tr><td>Regression</td><td>HomePage_TestingClass.validateInfoImageupdated()[pri:4, instance:test_package.HomePage_TestingClass@34e9fd99]<br/>HomePage_TestingClass.validateFileUploadAndImageUpload()[pri:3, instance:test_package.HomePage_TestingClass@34e9fd99]<br/></td></tr>
+<tr><td>Sanity</td><td>HomePage_TestingClass.verifyAdminOption()[pri:-1, instance:test_package.HomePage_TestingClass@34e9fd99]<br/>HomePage_TestingClass.verifyUserCreationData()[pri:1, instance:test_package.HomePage_TestingClass@34e9fd99]<br/>HomePage_TestingClass.verifyEmployeeTableData()[pri:9, instance:test_package.HomePage_TestingClass@34e9fd99]<br/></td></tr>
+<tr><td>Smoke</td><td>HomePage_TestingClass.verifyCompanyNameInAboutWindowOption()[pri:2, instance:test_package.HomePage_TestingClass@34e9fd99]<br/></td></tr>
 </table>
