--- a/test-output/old/Suite/methods-alphabetical.html
+++ b/test-output/old/Suite/methods-alphabetical.html
@@ -1,18 +1,46 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="ab8173">  <td>25/10/28 13:58:17</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;HomePage_TestingClass.ClosedTheApplication()[pri:0, instance:test_package.HomePage_TestingClass@327514f]">&lt;&lt;ClosedTheApplication</td> 
-<td>&nbsp;</td>  <td>main@617901222</td>   <td></td> </tr>
-<tr bgcolor="ab8173">  <td>25/10/28 13:57:25</td>   <td>-51442</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;HomePage_TestingClass.LoginInToTheApplication()[pri:0, instance:test_package.HomePage_TestingClass@327514f]">&gt;&gt;LoginInToTheApplication</td> 
-<td>&nbsp;</td>  <td>main@617901222</td>   <td></td> </tr>
-<tr bgcolor="ab8173">  <td>25/10/28 13:58:57</td>   <td>40124</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;HomePage_TestingClass.cleanObjects()[pri:0, instance:test_package.HomePage_TestingClass@327514f]">&lt;&lt;cleanObjects</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@617901222</td>   <td></td> </tr>
-<tr bgcolor="ab8173">  <td>25/10/28 13:58:57</td>   <td>40125</td> <td>&nbsp;</td><td title="&lt;&lt;HomePage_TestingClass.closedBrowser()[pri:0, instance:test_package.HomePage_TestingClass@327514f]">&lt;&lt;closedBrowser</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@617901222</td>   <td></td> </tr>
-<tr bgcolor="ab8173">  <td>25/10/28 13:57:18</td>   <td>-58151</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;HomePage_TestingClass.launchApplication(java.lang.String)[pri:0, instance:test_package.HomePage_TestingClass@327514f]">&gt;&gt;launchApplication</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@617901222</td>   <td></td> </tr>
-<tr bgcolor="ab8173">  <td>25/10/28 13:57:15</td>   <td>-61593</td> <td>&nbsp;</td><td title="&gt;&gt;HomePage_TestingClass.launchBrowser(java.lang.String)[pri:0, instance:test_package.HomePage_TestingClass@327514f]">&gt;&gt;launchBrowser</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@617901222</td>   <td></td> </tr>
-<tr bgcolor="ab8173">  <td>25/10/28 13:57:36</td>   <td>-40104</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="HomePage_TestingClass.validateInfoImageupdated()[pri:0, instance:test_package.HomePage_TestingClass@327514f]">validateInfoImageupdated</td> 
-  <td>main@617901222</td>   <td></td> </tr>
+<tr bgcolor="a26f67">  <td>25/11/24 02:00:02</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;HomePage_TestingClass.ClosedTheApplication()[pri:0, instance:test_package.HomePage_TestingClass@5b12b668]">&lt;&lt;ClosedTheApplication</td> 
+<td>&nbsp;</td>  <td>TestNG-tests-1@31114735</td>   <td></td> </tr>
+<tr bgcolor="a26f67">  <td>25/11/24 02:00:02</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;HomePage_TestingClass.ClosedTheApplication()[pri:0, instance:test_package.HomePage_TestingClass@5b12b668]">&lt;&lt;ClosedTheApplication</td> 
+<td>&nbsp;</td>  <td>TestNG-tests-1@31114735</td>   <td></td> </tr>
+<tr bgcolor="a26f67">  <td>25/11/24 02:00:02</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;HomePage_TestingClass.ClosedTheApplication()[pri:0, instance:test_package.HomePage_TestingClass@5b12b668]">&lt;&lt;ClosedTheApplication</td> 
+<td>&nbsp;</td>  <td>TestNG-tests-1@31114735</td>   <td></td> </tr>
+<tr bgcolor="a26f67">  <td>25/11/24 02:00:02</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;HomePage_TestingClass.ClosedTheApplication()[pri:0, instance:test_package.HomePage_TestingClass@5b12b668]">&lt;&lt;ClosedTheApplication</td> 
+<td>&nbsp;</td>  <td>TestNG-tests-1@31114735</td>   <td></td> </tr>
+<tr bgcolor="a26f67">  <td>25/11/24 02:00:02</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;HomePage_TestingClass.ClosedTheApplication()[pri:0, instance:test_package.HomePage_TestingClass@5b12b668]">&lt;&lt;ClosedTheApplication</td> 
+<td>&nbsp;</td>  <td>TestNG-tests-1@31114735</td>   <td></td> </tr>
+<tr bgcolor="a26f67">  <td>25/11/24 02:00:02</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;HomePage_TestingClass.ClosedTheApplication()[pri:0, instance:test_package.HomePage_TestingClass@5b12b668]">&lt;&lt;ClosedTheApplication</td> 
+<td>&nbsp;</td>  <td>TestNG-tests-1@31114735</td>   <td></td> </tr>
+<tr bgcolor="a26f67">  <td>25/11/24 02:00:02</td>   <td>-5</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;HomePage_TestingClass.LoginInToTheApplication()[pri:0, instance:test_package.HomePage_TestingClass@5b12b668]">&gt;&gt;LoginInToTheApplication</td> 
+<td>&nbsp;</td>  <td>TestNG-tests-1@31114735</td>   <td></td> </tr>
+<tr bgcolor="a26f67">  <td>25/11/24 02:00:02</td>   <td>-5</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;HomePage_TestingClass.LoginInToTheApplication()[pri:0, instance:test_package.HomePage_TestingClass@5b12b668]">&gt;&gt;LoginInToTheApplication</td> 
+<td>&nbsp;</td>  <td>TestNG-tests-1@31114735</td>   <td></td> </tr>
+<tr bgcolor="a26f67">  <td>25/11/24 02:00:02</td>   <td>-5</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;HomePage_TestingClass.LoginInToTheApplication()[pri:0, instance:test_package.HomePage_TestingClass@5b12b668]">&gt;&gt;LoginInToTheApplication</td> 
+<td>&nbsp;</td>  <td>TestNG-tests-1@31114735</td>   <td></td> </tr>
+<tr bgcolor="a26f67">  <td>25/11/24 02:00:02</td>   <td>-5</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;HomePage_TestingClass.LoginInToTheApplication()[pri:0, instance:test_package.HomePage_TestingClass@5b12b668]">&gt;&gt;LoginInToTheApplication</td> 
+<td>&nbsp;</td>  <td>TestNG-tests-1@31114735</td>   <td></td> </tr>
+<tr bgcolor="a26f67">  <td>25/11/24 02:00:02</td>   <td>-5</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;HomePage_TestingClass.LoginInToTheApplication()[pri:0, instance:test_package.HomePage_TestingClass@5b12b668]">&gt;&gt;LoginInToTheApplication</td> 
+<td>&nbsp;</td>  <td>TestNG-tests-1@31114735</td>   <td></td> </tr>
+<tr bgcolor="a26f67">  <td>25/11/24 02:00:02</td>   <td>-5</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;HomePage_TestingClass.LoginInToTheApplication()[pri:0, instance:test_package.HomePage_TestingClass@5b12b668]">&gt;&gt;LoginInToTheApplication</td> 
+<td>&nbsp;</td>  <td>TestNG-tests-1@31114735</td>   <td></td> </tr>
+<tr bgcolor="a26f67">  <td>25/11/24 02:00:02</td>   <td>3</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;HomePage_TestingClass.cleanObjects()[pri:0, instance:test_package.HomePage_TestingClass@5b12b668]">&lt;&lt;cleanObjects</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>TestNG-tests-1@31114735</td>   <td></td> </tr>
+<tr bgcolor="a2befb">  <td>25/11/24 01:57:54</td>   <td>-127611</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;LoginPage_TestingClass.cleanObjects()[pri:0, instance:test_package.LoginPage_TestingClass@7bedc48a]">&lt;&lt;cleanObjects</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>TestNG-tests-2@1491755116</td>   <td></td> </tr>
+<tr bgcolor="a26f67">  <td>25/11/24 02:00:02</td>   <td>4</td> <td>&nbsp;</td><td title="&lt;&lt;HomePage_TestingClass.closedBrowser()[pri:0, instance:test_package.HomePage_TestingClass@5b12b668]">&lt;&lt;closedBrowser</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>TestNG-tests-1@31114735</td>   <td></td> </tr>
+<tr bgcolor="a2befb">  <td>25/11/24 01:57:54</td>   <td>-127610</td> <td>&nbsp;</td><td title="&lt;&lt;LoginPage_TestingClass.closedBrowser()[pri:0, instance:test_package.LoginPage_TestingClass@7bedc48a]">&lt;&lt;closedBrowser</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>TestNG-tests-2@1491755116</td>   <td></td> </tr>
+<tr bgcolor="a26f67">  <td>25/11/24 01:57:58</td>   <td>-123789</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;HomePage_TestingClass.launchApplication(java.lang.String)[pri:0, instance:test_package.HomePage_TestingClass@5b12b668]">&gt;&gt;launchApplication</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>TestNG-tests-1@31114735</td>   <td></td> </tr>
+<tr bgcolor="a2befb">  <td>25/11/24 01:57:54</td>   <td>-127647</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;LoginPage_TestingClass.launchApplication()[pri:0, instance:test_package.LoginPage_TestingClass@7bedc48a]">&gt;&gt;launchApplication</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>TestNG-tests-2@1491755116</td>   <td></td> </tr>
+<tr bgcolor="a26f67">  <td>25/11/24 01:57:54</td>   <td>-127647</td> <td>&nbsp;</td><td title="&gt;&gt;HomePage_TestingClass.launchBrowser(java.lang.String)[pri:0, instance:test_package.HomePage_TestingClass@5b12b668]">&gt;&gt;launchBrowser</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>TestNG-tests-1@31114735</td>   <td></td> </tr>
+<tr bgcolor="a26f67">  <td>25/11/24 01:58:15</td>   <td>-106529</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="HomePage_TestingClass.verifyAdminOption()[pri:-1, instance:test_package.HomePage_TestingClass@5b12b668]">verifyAdminOption</td> 
+  <td>TestNG-tests-1@31114735</td>   <td></td> </tr>
+<tr bgcolor="a26f67">  <td>25/11/24 01:58:40</td>   <td>-81890</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="HomePage_TestingClass.verifyUserCreationData()[pri:1, instance:test_package.HomePage_TestingClass@5b12b668]">verifyUserCreationData</td> 
+  <td>TestNG-tests-1@31114735</td>   <td></td> </tr>
 </table>
