--- a/test-output/old/Suite1/groups.html
+++ b/test-output/old/Suite1/groups.html
@@ -1,5 +1,5 @@
 <h2>Groups used for this test run</h2><table border="1">
 <tr> <td align="center"><b>Group name</b></td><td align="center"><b>Methods</b></td></tr><tr><td>Regression</td><td>HomePage_TestingClass.validateInfoImageupdated()[pri:4, instance:test_package.HomePage_TestingClass@5b12b668]<br/>HomePage_TestingClass.validateFileUploadAndImageUpload()[pri:3, instance:test_package.HomePage_TestingClass@5b12b668]<br/></td></tr>
 <tr><td>Sanity</td><td>HomePage_TestingClass.verifyAdminOption()[pri:-1, instance:test_package.HomePage_TestingClass@5b12b668]<br/>HomePage_TestingClass.verifyEmployeeTableData()[pri:9, instance:test_package.HomePage_TestingClass@5b12b668]<br/>HomePage_TestingClass.verifyUserCreationData()[pri:1, instance:test_package.HomePage_TestingClass@5b12b668]<br/></td></tr>
-<tr><td>Smoke</td><td>LoginPage_TestingClass.verifyloginTest()[pri:7, instance:test_package.LoginPage_TestingClass@7bedc48a]<br/>HomePage_TestingClass.verifyCompanyNameInAboutWindowOption()[pri:2, instance:test_package.HomePage_TestingClass@5b12b668]<br/></td></tr>
+<tr><td>Smoke</td><td>HomePage_TestingClass.verifyCompanyNameInAboutWindowOption()[pri:2, instance:test_package.HomePage_TestingClass@5b12b668]<br/></td></tr>
 </table>
