--- a/test-output/old/Suite/classes.html
+++ b/test-output/old/Suite/classes.html
@@ -4,6 +4,37 @@
 <th>Method name</th>
 <th>Groups</th>
 </tr><tr>
+<td>test_package.LoginPage_TestingClass</td>
+<td>&nbsp;</td><td>&nbsp;</td></tr>
+<tr>
+<td align='center' colspan='3'>@Test</td>
+</tr>
+<tr>
+<td>&nbsp;</td>
+<td>verifyloginTest</td>
+<td>Smoke </td>
+</tr>
+<tr>
+<td align='center' colspan='3'>@BeforeClass</td>
+</tr>
+<tr>
+<td>&nbsp;</td>
+<td>launchApplication</td>
+<td>&nbsp;</td></tr>
+<tr>
+<td align='center' colspan='3'>@BeforeMethod</td>
+</tr>
+<tr>
+<td align='center' colspan='3'>@AfterMethod</td>
+</tr>
+<tr>
+<td align='center' colspan='3'>@AfterClass</td>
+</tr>
+<tr>
+<td>&nbsp;</td>
+<td>cleanObjects</td>
+<td>&nbsp;</td></tr>
+<tr>
 <td>test_package.HomePage_TestingClass</td>
 <td>&nbsp;</td><td>&nbsp;</td></tr>
 <tr>
@@ -12,32 +43,32 @@
 <tr>
 <td>&nbsp;</td>
 <td>verifyUserCreationData</td>
-<td>PPpariharPQR </td>
+<td>Sanity </td>
 </tr>
 <tr>
 <td>&nbsp;</td>
 <td>validateInfoImageupdated</td>
-<td>@PARAG123456789 </td>
+<td>Regression </td>
 </tr>
 <tr>
 <td>&nbsp;</td>
 <td>verifyAdminOption</td>
-<td>PPparihar </td>
+<td>Sanity </td>
 </tr>
 <tr>
 <td>&nbsp;</td>
 <td>verifyEmployeeTableData</td>
-<td>PPpariharXYZ </td>
+<td>Sanity </td>
 </tr>
 <tr>
 <td>&nbsp;</td>
 <td>verifyCompanyNameInAboutWindowOption</td>
-<td>PPparihar123 </td>
+<td>Smoke </td>
 </tr>
 <tr>
 <td>&nbsp;</td>
 <td>validateFileUploadAndImageUpload</td>
-<td>PP@Parihar@PP </td>
+<td>Regression </td>
 </tr>
 <tr>
 <td align='center' colspan='3'>@BeforeClass</td>
