[commited changes : 23jan2026]

--- a/test-output/old/Suite1/methods-not-run.html
+++ b/test-output/old/Suite1/methods-not-run.html
@@ -1,2 +1,7 @@
 <h2>Methods that were not run</h2><table>
+<tr><td>test_package.HomePage_TestingClass.validateInfoImageupdated</td></tr>
+<tr><td>base_package.BaseClass.closedBrowser</td></tr>
+<tr><td>test_package.HomePage_TestingClass.validateFileUploadAndImageUpload</td></tr>
+<tr><td>test_package.HomePage_TestingClass.verifyCompanyNameInAboutWindowOption</td></tr>
+<tr><td>test_package.LoginPage_TestingClass.verifyloginTest</td></tr>
 </table>
