--- a/test-output/old/Default suite/methods.html
+++ b/test-output/old/Default suite/methods.html
@@ -1,32 +1,20 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="a19691">  <td>26/01/13 17:16:29</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;HomePage_TestingClass.cleanObjects()[pri:0, instance:test_package.HomePage_TestingClass@34e9fd99]">&lt;&lt;cleanObjects</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@617901222</td>   <td></td> </tr>
-<tr bgcolor="a19691">  <td>26/01/13 17:16:29</td>   <td>-2</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;HomePage_TestingClass.ClosedTheApplication()[pri:0, instance:test_package.HomePage_TestingClass@34e9fd99]">&lt;&lt;ClosedTheApplication</td> 
-<td>&nbsp;</td>  <td>main@617901222</td>   <td></td> </tr>
-<tr bgcolor="a19691">  <td>26/01/13 17:16:29</td>   <td>-4</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;HomePage_TestingClass.LoginInToTheApplication()[pri:0, instance:test_package.HomePage_TestingClass@34e9fd99]">&gt;&gt;LoginInToTheApplication</td> 
-<td>&nbsp;</td>  <td>main@617901222</td>   <td></td> </tr>
-<tr bgcolor="a19691">  <td>26/01/13 17:16:29</td>   <td>-4</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;HomePage_TestingClass.LoginInToTheApplication()[pri:0, instance:test_package.HomePage_TestingClass@34e9fd99]">&gt;&gt;LoginInToTheApplication</td> 
-<td>&nbsp;</td>  <td>main@617901222</td>   <td></td> </tr>
-<tr bgcolor="a19691">  <td>26/01/13 17:16:29</td>   <td>-2</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;HomePage_TestingClass.ClosedTheApplication()[pri:0, instance:test_package.HomePage_TestingClass@34e9fd99]">&lt;&lt;ClosedTheApplication</td> 
-<td>&nbsp;</td>  <td>main@617901222</td>   <td></td> </tr>
-<tr bgcolor="a19691">  <td>26/01/13 17:16:29</td>   <td>-2</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;HomePage_TestingClass.ClosedTheApplication()[pri:0, instance:test_package.HomePage_TestingClass@34e9fd99]">&lt;&lt;ClosedTheApplication</td> 
-<td>&nbsp;</td>  <td>main@617901222</td>   <td></td> </tr>
-<tr bgcolor="a19691">  <td>26/01/13 17:16:29</td>   <td>-2</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;HomePage_TestingClass.ClosedTheApplication()[pri:0, instance:test_package.HomePage_TestingClass@34e9fd99]">&lt;&lt;ClosedTheApplication</td> 
-<td>&nbsp;</td>  <td>main@617901222</td>   <td></td> </tr>
-<tr bgcolor="a19691">  <td>26/01/13 17:16:29</td>   <td>-4</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;HomePage_TestingClass.LoginInToTheApplication()[pri:0, instance:test_package.HomePage_TestingClass@34e9fd99]">&gt;&gt;LoginInToTheApplication</td> 
-<td>&nbsp;</td>  <td>main@617901222</td>   <td></td> </tr>
-<tr bgcolor="a19691">  <td>26/01/13 17:16:29</td>   <td>-2</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;HomePage_TestingClass.ClosedTheApplication()[pri:0, instance:test_package.HomePage_TestingClass@34e9fd99]">&lt;&lt;ClosedTheApplication</td> 
-<td>&nbsp;</td>  <td>main@617901222</td>   <td></td> </tr>
-<tr bgcolor="a19691">  <td>26/01/13 17:16:29</td>   <td>-4</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;HomePage_TestingClass.LoginInToTheApplication()[pri:0, instance:test_package.HomePage_TestingClass@34e9fd99]">&gt;&gt;LoginInToTheApplication</td> 
-<td>&nbsp;</td>  <td>main@617901222</td>   <td></td> </tr>
-<tr bgcolor="a19691">  <td>26/01/13 17:16:29</td>   <td>-2</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;HomePage_TestingClass.ClosedTheApplication()[pri:0, instance:test_package.HomePage_TestingClass@34e9fd99]">&lt;&lt;ClosedTheApplication</td> 
-<td>&nbsp;</td>  <td>main@617901222</td>   <td></td> </tr>
-<tr bgcolor="a19691">  <td>26/01/13 17:16:29</td>   <td>-4</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;HomePage_TestingClass.LoginInToTheApplication()[pri:0, instance:test_package.HomePage_TestingClass@34e9fd99]">&gt;&gt;LoginInToTheApplication</td> 
-<td>&nbsp;</td>  <td>main@617901222</td>   <td></td> </tr>
-<tr bgcolor="a19691">  <td>26/01/13 17:16:29</td>   <td>-4</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;HomePage_TestingClass.LoginInToTheApplication()[pri:0, instance:test_package.HomePage_TestingClass@34e9fd99]">&gt;&gt;LoginInToTheApplication</td> 
-<td>&nbsp;</td>  <td>main@617901222</td>   <td></td> </tr>
-<tr bgcolor="a19691">  <td>26/01/13 17:16:29</td>   <td>0</td> <td>&nbsp;</td><td title="&lt;&lt;HomePage_TestingClass.closedBrowser()[pri:0, instance:test_package.HomePage_TestingClass@34e9fd99]">&lt;&lt;closedBrowser</td> 
+<tr bgcolor="a19691">  <td>26/01/23 00:13:34</td>   <td>0</td> <td>&nbsp;</td><td title="&lt;&lt;LoginPage_TestingClass.closedBrowser()[pri:0, instance:test_package.LoginPage_TestingClass@22ff4249]">&lt;&lt;closedBrowser</td> 
 <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@617901222</td>   <td></td> </tr>
+<tr bgcolor="a19691">  <td>26/01/23 00:13:29</td>   <td>-4607</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginPage_TestingClass.verifyloginTest()[pri:-5, instance:test_package.LoginPage_TestingClass@22ff4249]">verifyloginTest</td> 
+  <td>main@617901222</td>   <td></td> </tr>
+<tr bgcolor="a19691">  <td>26/01/23 00:13:29</td>   <td>-4607</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginPage_TestingClass.verifyloginTest()[pri:-5, instance:test_package.LoginPage_TestingClass@22ff4249]">verifyloginTest</td> 
+  <td>main@617901222</td>   <td></td> </tr>
+<tr bgcolor="a19691">  <td>26/01/23 00:13:34</td>   <td>-7</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;LoginPage_TestingClass.cleanObjects()[pri:0, instance:test_package.LoginPage_TestingClass@22ff4249]">&lt;&lt;cleanObjects</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@617901222</td>   <td></td> </tr>
+<tr bgcolor="a19691">  <td>26/01/23 00:12:54</td>   <td>-40142</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;LoginPage_TestingClass.launchApplication()[pri:0, instance:test_package.LoginPage_TestingClass@22ff4249]">&gt;&gt;launchApplication</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@617901222</td>   <td></td> </tr>
+<tr bgcolor="a19691">  <td>26/01/23 00:12:49</td>   <td>-44678</td> <td>&nbsp;</td><td title="&gt;&gt;LoginPage_TestingClass.launchBrowser(java.lang.String)[pri:0, instance:test_package.LoginPage_TestingClass@22ff4249]">&gt;&gt;launchBrowser</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@617901222</td>   <td></td> </tr>
+<tr bgcolor="a19691">  <td>26/01/23 00:13:29</td>   <td>-4607</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginPage_TestingClass.verifyloginTest()[pri:-5, instance:test_package.LoginPage_TestingClass@22ff4249]">verifyloginTest</td> 
+  <td>main@617901222</td>   <td></td> </tr>
+<tr bgcolor="a19691">  <td>26/01/23 00:13:29</td>   <td>-4607</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginPage_TestingClass.verifyloginTest()[pri:-5, instance:test_package.LoginPage_TestingClass@22ff4249]">verifyloginTest</td> 
+  <td>main@617901222</td>   <td></td> </tr>
 </table>
