[commited new changes: 24 january]

--- a/test-output/emailable-report.html
+++ b/test-output/emailable-report.html
@@ -9,53 +9,14 @@
 <table>
 <tr><th>Test</th><th># Passed</th><th># Skipped</th><th># Retried</th><th># Failed</th><th>Time (ms)</th><th>Included Groups</th><th>Excluded Groups</th></tr>
 <tr><th colspan="8">Suite1</th></tr>
-<tr><td><a href="#t0">Test_1</a></td><td class="num">0</td><td class="num attn">3</td><td class="num">0</td><td class="num">0</td><td class="num">277</td><td>Sanity</td><td></td></tr>
+<tr><td><a href="#t0">Test_1</a></td><td class="num">5</td><td class="num">0</td><td class="num">0</td><td class="num">0</td><td class="num">70,949</td><td>Smoke</td><td></td></tr>
 </table>
-<table id='summary'><thead><tr><th>Class</th><th>Method</th><th>Start</th><th>Time (ms)</th></tr></thead><tbody><tr><th colspan="4">Suite1</th></tr></tbody><tbody id="t0"><tr><th colspan="4">Test_1 &#8212; failed (configuration methods)</th></tr><tr class="failedeven"><td rowspan="7">test_package.HomePage_TestingClass</td><td><a href="#m0">ClosedTheApplication</a></td><td rowspan="3">1769159069772</td><td rowspan="3">1</td></tr><tr class="failedeven"><td><a href="#m1">ClosedTheApplication</a></td></tr><tr class="failedeven"><td><a href="#m2">ClosedTheApplication</a></td></tr><tr class="failedeven"><td><a href="#m3">LoginInToTheApplication</a></td><td rowspan="3">1769159069783</td><td rowspan="3">0</td></tr><tr class="failedeven"><td><a href="#m4">LoginInToTheApplication</a></td></tr><tr class="failedeven"><td><a href="#m5">LoginInToTheApplication</a></td></tr><tr class="failedeven"><td><a href="#m6">launchApplication</a></td><td rowspan="1">1769159069740</td><td rowspan="1">8</td></tr><tr class="failedodd"><td rowspan="1">test_package.LoginPage_TestingClass</td><td><a href="#m7">closedBrowser</a></td><td rowspan="1">1769159069788</td><td rowspan="1">1</td></tr><tr><th colspan="4">Test_1 &#8212; skipped</th></tr><tr class="skippedeven"><td rowspan="3">test_package.HomePage_TestingClass</td><td><a href="#m8">verifyAdminOption</a></td><td rowspan="1">1769159069764</td><td rowspan="1">0</td></tr><tr class="skippedeven"><td><a href="#m9">verifyEmployeeTableData</a></td><td rowspan="1">1769159069784</td><td rowspan="1">0</td></tr><tr class="skippedeven"><td><a href="#m10">verifyUserCreationData</a></td><td rowspan="1">1769159069779</td><td rowspan="1">0</td></tr></tbody>
+<table id='summary'><thead><tr><th>Class</th><th>Method</th><th>Start</th><th>Time (ms)</th></tr></thead><tbody><tr><th colspan="4">Suite1</th></tr></tbody><tbody id="t0"><tr><th colspan="4">Test_1 &#8212; passed</th></tr><tr class="passedeven"><td rowspan="1">test_package.HomePage_TestingClass</td><td><a href="#m0">verifyCompanyNameInAboutWindowOption</a></td><td rowspan="1">1769197644064</td><td rowspan="1">9485</td></tr><tr class="passedodd"><td rowspan="4">test_package.LoginPage_TestingClass</td><td><a href="#m1">verifyloginTest</a></td><td rowspan="4">1769197618916</td><td rowspan="4">4148</td></tr><tr class="passedodd"><td><a href="#m2">verifyloginTest</a></td></tr><tr class="passedodd"><td><a href="#m3">verifyloginTest</a></td></tr><tr class="passedodd"><td><a href="#m4">verifyloginTest</a></td></tr></tbody>
 </table>
-<h2>Test_1</h2><h3 id="m0">test_package.HomePage_TestingClass#ClosedTheApplication</h3><table class="result"><tr><th>Exception</th></tr><tr><td><div class="stacktrace">java.lang.NullPointerException: Cannot invoke &quot;pom_package.HomePageOrangeHRM.clickAccoutDropDown()&quot; because &quot;this.homepageoranghrm&quot; is null
-	at test_package.HomePage_TestingClass.ClosedTheApplication(HomePage_TestingClass.java:428)
-	at java.base/java.util.ArrayList.forEach(ArrayList.java:1596)
-... Removed 30 stack frames</div></td></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
-<h3 id="m1">test_package.HomePage_TestingClass#ClosedTheApplication</h3><table class="result"><tr><th>Exception</th></tr><tr><td><div class="stacktrace">java.lang.NullPointerException: Cannot invoke &quot;pom_package.HomePageOrangeHRM.clickAccoutDropDown()&quot; because &quot;this.homepageoranghrm&quot; is null
-	at test_package.HomePage_TestingClass.ClosedTheApplication(HomePage_TestingClass.java:428)
-	at java.base/java.util.ArrayList.forEach(ArrayList.java:1596)
-... Removed 30 stack frames</div></td></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
-<h3 id="m2">test_package.HomePage_TestingClass#ClosedTheApplication</h3><table class="result"><tr><th>Exception</th></tr><tr><td><div class="stacktrace">java.lang.NullPointerException: Cannot invoke &quot;pom_package.HomePageOrangeHRM.clickAccoutDropDown()&quot; because &quot;this.homepageoranghrm&quot; is null
-	at test_package.HomePage_TestingClass.ClosedTheApplication(HomePage_TestingClass.java:428)
-	at java.base/java.util.ArrayList.forEach(ArrayList.java:1596)
-... Removed 30 stack frames</div></td></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
-<h3 id="m3">test_package.HomePage_TestingClass#LoginInToTheApplication</h3><table class="result"><tr><th>Exception</th></tr><tr><td><div class="stacktrace">java.lang.NullPointerException: Cannot invoke &quot;org.apache.log4j.Logger.info(Object)&quot; because &quot;test_package.HomePage_TestingClass.logger&quot; is null
-	at test_package.HomePage_TestingClass.LoginInToTheApplication(HomePage_TestingClass.java:165)
-	at java.base/java.util.ArrayList.forEach(ArrayList.java:1596)
-... Removed 29 stack frames</div></td></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
-<h3 id="m4">test_package.HomePage_TestingClass#LoginInToTheApplication</h3><table class="result"><tr><th>Exception</th></tr><tr><td><div class="stacktrace">java.lang.NullPointerException: Cannot invoke &quot;org.apache.log4j.Logger.info(Object)&quot; because &quot;test_package.HomePage_TestingClass.logger&quot; is null
-	at test_package.HomePage_TestingClass.LoginInToTheApplication(HomePage_TestingClass.java:165)
-	at java.base/java.util.ArrayList.forEach(ArrayList.java:1596)
-... Removed 29 stack frames</div></td></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
-<h3 id="m5">test_package.HomePage_TestingClass#LoginInToTheApplication</h3><table class="result"><tr><th>Exception</th></tr><tr><td><div class="stacktrace">java.lang.NullPointerException: Cannot invoke &quot;org.apache.log4j.Logger.info(Object)&quot; because &quot;test_package.HomePage_TestingClass.logger&quot; is null
-	at test_package.HomePage_TestingClass.LoginInToTheApplication(HomePage_TestingClass.java:165)
-	at java.base/java.util.ArrayList.forEach(ArrayList.java:1596)
-... Removed 29 stack frames</div></td></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
-<h3 id="m6">test_package.HomePage_TestingClass#launchApplication</h3><table class="result"><tr><th>Exception</th></tr><tr><td><div class="stacktrace">java.lang.NullPointerException: Cannot invoke &quot;org.openqa.selenium.WebDriver.get(String)&quot; because &quot;base_package.BaseClass.driver&quot; is null
-	at base_package.BaseClass.getURL(BaseClass.java:127)
-	at test_package.HomePage_TestingClass.launchApplication(HomePage_TestingClass.java:144)
-	at java.base/java.util.ArrayList.forEach(ArrayList.java:1596)
-... Removed 23 stack frames</div></td></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
-<h3 id="m7">test_package.LoginPage_TestingClass#closedBrowser</h3><table class="result"><tr><th>Exception</th></tr><tr><td><div class="stacktrace">java.lang.NullPointerException: Cannot invoke &quot;org.openqa.selenium.WebDriver.quit()&quot; because &quot;base_package.BaseClass.driver&quot; is null
-	at base_package.BaseClass.closedBrowser(BaseClass.java:137)
-... Removed 22 stack frames</div></td></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
-<h3 id="m8">test_package.HomePage_TestingClass#verifyAdminOption</h3><table class="result"><tr><th>Exception</th></tr><tr><td><div class="stacktrace">java.lang.NullPointerException: Cannot invoke &quot;org.apache.log4j.Logger.info(Object)&quot; because &quot;test_package.HomePage_TestingClass.logger&quot; is null
-	at test_package.HomePage_TestingClass.LoginInToTheApplication(HomePage_TestingClass.java:165)
-	at java.base/java.util.ArrayList.forEach(ArrayList.java:1596)
-... Removed 29 stack frames</div></td></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
-<h3 id="m9">test_package.HomePage_TestingClass#verifyEmployeeTableData</h3><table class="result"><tr><th>Exception</th></tr><tr><td><div class="stacktrace">java.lang.NullPointerException: Cannot invoke &quot;org.apache.log4j.Logger.info(Object)&quot; because &quot;test_package.HomePage_TestingClass.logger&quot; is null
-	at test_package.HomePage_TestingClass.LoginInToTheApplication(HomePage_TestingClass.java:165)
-	at java.base/java.util.ArrayList.forEach(ArrayList.java:1596)
-... Removed 29 stack frames</div></td></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
-<h3 id="m10">test_package.HomePage_TestingClass#verifyUserCreationData</h3><table class="result"><tr><th>Exception</th></tr><tr><td><div class="stacktrace">java.lang.NullPointerException: Cannot invoke &quot;pom_package.HomePageOrangeHRM.clickAccoutDropDown()&quot; because &quot;this.homepageoranghrm&quot; is null
-	at test_package.HomePage_TestingClass.ClosedTheApplication(HomePage_TestingClass.java:428)
-	at java.base/java.util.ArrayList.forEach(ArrayList.java:1596)
-... Removed 30 stack frames</div></td></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h2>Test_1</h2><h3 id="m0">test_package.HomePage_TestingClass#verifyCompanyNameInAboutWindowOption</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h3 id="m1">test_package.LoginPage_TestingClass#verifyloginTest</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h3 id="m2">test_package.LoginPage_TestingClass#verifyloginTest</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h3 id="m3">test_package.LoginPage_TestingClass#verifyloginTest</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h3 id="m4">test_package.LoginPage_TestingClass#verifyloginTest</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
 </body>
 </html>
