--- a/test-output/old/Suite1/methods-alphabetical.html
+++ b/test-output/old/Suite1/methods-alphabetical.html
@@ -1,22 +1,30 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Suite1</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="6b85f9">  <td>26/01/23 14:34:29</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;HomePage_TestingClass.ClosedTheApplication()[pri:0, instance:test_package.HomePage_TestingClass@9d5509a]">&lt;&lt;ClosedTheApplication</td> 
+<tr bgcolor="647d63">  <td>26/01/24 01:17:33</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;HomePage_TestingClass.ClosedTheApplication()[pri:0, instance:test_package.HomePage_TestingClass@61d6015a]">&lt;&lt;ClosedTheApplication</td> 
 <td>&nbsp;</td>  <td>main@617901222</td>   <td></td> </tr>
-<tr bgcolor="6b85f9">  <td>26/01/23 14:34:29</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;HomePage_TestingClass.ClosedTheApplication()[pri:0, instance:test_package.HomePage_TestingClass@9d5509a]">&lt;&lt;ClosedTheApplication</td> 
+<tr bgcolor="647d63">  <td>26/01/24 01:17:11</td>   <td>-22003</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;HomePage_TestingClass.LoginInToTheApplication()[pri:0, instance:test_package.HomePage_TestingClass@61d6015a]">&gt;&gt;LoginInToTheApplication</td> 
 <td>&nbsp;</td>  <td>main@617901222</td>   <td></td> </tr>
-<tr bgcolor="6b85f9">  <td>26/01/23 14:34:29</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;HomePage_TestingClass.ClosedTheApplication()[pri:0, instance:test_package.HomePage_TestingClass@9d5509a]">&lt;&lt;ClosedTheApplication</td> 
-<td>&nbsp;</td>  <td>main@617901222</td>   <td></td> </tr>
-<tr bgcolor="6b85f9">  <td>26/01/23 14:34:29</td>   <td>-3</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;HomePage_TestingClass.LoginInToTheApplication()[pri:0, instance:test_package.HomePage_TestingClass@9d5509a]">&gt;&gt;LoginInToTheApplication</td> 
-<td>&nbsp;</td>  <td>main@617901222</td>   <td></td> </tr>
-<tr bgcolor="6b85f9">  <td>26/01/23 14:34:29</td>   <td>-3</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;HomePage_TestingClass.LoginInToTheApplication()[pri:0, instance:test_package.HomePage_TestingClass@9d5509a]">&gt;&gt;LoginInToTheApplication</td> 
-<td>&nbsp;</td>  <td>main@617901222</td>   <td></td> </tr>
-<tr bgcolor="6b85f9">  <td>26/01/23 14:34:29</td>   <td>-3</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;HomePage_TestingClass.LoginInToTheApplication()[pri:0, instance:test_package.HomePage_TestingClass@9d5509a]">&gt;&gt;LoginInToTheApplication</td> 
-<td>&nbsp;</td>  <td>main@617901222</td>   <td></td> </tr>
-<tr bgcolor="6b85f9">  <td>26/01/23 14:34:29</td>   <td>2</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;HomePage_TestingClass.cleanObjects()[pri:0, instance:test_package.HomePage_TestingClass@9d5509a]">&lt;&lt;cleanObjects</td> 
+<tr bgcolor="908cc0">  <td>26/01/24 01:17:08</td>   <td>-25759</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;LoginPage_TestingClass.cleanObjects()[pri:0, instance:test_package.LoginPage_TestingClass@765d7657]">&lt;&lt;cleanObjects</td> 
 <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@617901222</td>   <td></td> </tr>
-<tr bgcolor="da69a0">  <td>26/01/23 14:34:29</td>   <td>3</td> <td>&nbsp;</td><td title="&lt;&lt;BaseClass.closedBrowser()[pri:0, instance:test_package.LoginPage_TestingClass@477b4cdf]">&lt;&lt;closedBrowser</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@617901222</td>   <td></td> </tr>
-<tr bgcolor="6b85f9">  <td>26/01/23 14:34:29</td>   <td>-42</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;HomePage_TestingClass.launchApplication()[pri:0, instance:test_package.HomePage_TestingClass@9d5509a]">&gt;&gt;launchApplication</td> 
+<tr bgcolor="647d63">  <td>26/01/24 01:17:41</td>   <td>7631</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;HomePage_TestingClass.cleanObjects()[pri:0, instance:test_package.HomePage_TestingClass@61d6015a]">&lt;&lt;cleanObjects</td> 
 <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@617901222</td>   <td></td> </tr>
+<tr bgcolor="908cc0">  <td>26/01/24 01:16:31</td>   <td>-62536</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;LoginPage_TestingClass.launchApplication()[pri:0, instance:test_package.LoginPage_TestingClass@765d7657]">&gt;&gt;launchApplication</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@617901222</td>   <td></td> </tr>
+<tr bgcolor="647d63">  <td>26/01/24 01:17:08</td>   <td>-25755</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;HomePage_TestingClass.launchApplication()[pri:0, instance:test_package.HomePage_TestingClass@61d6015a]">&gt;&gt;launchApplication</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@617901222</td>   <td></td> </tr>
+<tr bgcolor="91e38e">  <td>26/01/24 01:15:37</td>   <td>-116146</td> <td title="&gt;&gt;BaseClass.setupSuite()[pri:0, instance:test_package.LoginPage_TestingClass@765d7657]">&gt;&gt;setupSuite</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@617901222</td>   <td></td> </tr>
+<tr bgcolor="91e38e">  <td>26/01/24 01:17:42</td>   <td>8726</td> <td title="&lt;&lt;BaseClass.tearDownSuite()[pri:0, instance:test_package.LoginPage_TestingClass@765d7657]">&lt;&lt;tearDownSuite</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@617901222</td>   <td></td> </tr>
+<tr bgcolor="647d63">  <td>26/01/24 01:17:24</td>   <td>-9765</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="HomePage_TestingClass.verifyCompanyNameInAboutWindowOption()[pri:2, instance:test_package.HomePage_TestingClass@61d6015a]">verifyCompanyNameInAboutWindowOption</td> 
+  <td>main@617901222</td>   <td></td> </tr>
+<tr bgcolor="908cc0">  <td>26/01/24 01:17:03</td>   <td>-30484</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginPage_TestingClass.verifyloginTest()[pri:-1, instance:test_package.LoginPage_TestingClass@765d7657]">verifyloginTest</td> 
+  <td>main@617901222</td>   <td></td> </tr>
+<tr bgcolor="908cc0">  <td>26/01/24 01:17:03</td>   <td>-30484</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginPage_TestingClass.verifyloginTest()[pri:-1, instance:test_package.LoginPage_TestingClass@765d7657]">verifyloginTest</td> 
+  <td>main@617901222</td>   <td></td> </tr>
+<tr bgcolor="908cc0">  <td>26/01/24 01:17:03</td>   <td>-30484</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginPage_TestingClass.verifyloginTest()[pri:-1, instance:test_package.LoginPage_TestingClass@765d7657]">verifyloginTest</td> 
+  <td>main@617901222</td>   <td></td> </tr>
+<tr bgcolor="908cc0">  <td>26/01/24 01:17:03</td>   <td>-30484</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginPage_TestingClass.verifyloginTest()[pri:-1, instance:test_package.LoginPage_TestingClass@765d7657]">verifyloginTest</td> 
+  <td>main@617901222</td>   <td></td> </tr>
 </table>
